<resources>
    <string name="app_name">U Sneakers</string>
    <string name="LoadingTitle">U Sneakers, the sneaker specialist you can trust.</string>
    <string name="loading_screen_image">LoadingScreenImage</string>

    <!--Navigation strings-->
    <string name="NavHome">Home</string>
    <string name="NavCatalogues">Catalogues</string>
    <string name="NavVerify">Verification</string>
    <string name="NavAccount">My Account</string>

    <!--Login and registration strings-->
    <string name="text_account">All Account</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_newname">New Name</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_not_match">Password does not matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="success_login_message">You have successfully login as: </string>
    <string name="success_update_user_name">You have successfully updated your name</string>

    <!--Facebook Login strings-->
    <string name="facebook_app_id">527891928090750</string>
    <string name="fb_login_protocol_scheme">fb527891928090750</string>

    <!--Heading text-->
    <string name="Heading">Please Login or Register to explore more features!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Home fragment titles-->
    <string name="Intro">Intro</string>
    <string name="Gallery">Gallery</string>
    <string name="title_activity_maps">Map</string>

    <!--Home page texts-->
    <string name="home_top">Welcome to U Sneaker</string>
    <string name="home_bottom_left">U Sneaker offers range of coupon code for popular sneaker with different brand. Browse our catalogue and generate a coupon for the sneaker you like for 20% off. You can copy the code and redeem them while you purchasing sneaker in their official brand website.</string>
    <string name="home_bottom_right">We offer a service to validate and verify whether your sneaker is fake or not. First time verification is free, please jump to Verification page if you would like to know more.</string>
    <string name="home_swipe">(Swipe to view our gallery)</string>

    <!--Verification page text-->
    <string name="verify_heading">Verify Sneaker</string>
    <string name="verify_text">You can bring one pair of sneakers to our Verification Centre, and one of our specialist will verify them. The first time is free, otherwise the service will be charged for $20.</string>
    <string name="verify_contacts">Contact Us: </string>
    <string name="verify_address">221 Burwood Hwy, Burwood VIC 3125</string>
    <string name="verify_phone">(03) 9244 6100</string>
    <string name="verify_googlemap">(Or you can find us on Google Map)</string>

    <!--Catalogue Heading-->
    <string name="catalogue_heading">All Sneakers</string>

    <!--coupon button-->
    <string name="coupon_button">Generate your one time coupon</string>

    <!--Account -->
    <string name="account_heading">You can update your personal detail here!</string>
    <string name="update_button">Update</string>
    <string name="logout">Log out</string>

</resources>
