<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_text"
        android:gravity="center">
    </TextView>

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_contacts"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:layout_below="@id/text1">
    </TextView>

    <TextView
        android:id="@+id/tv1"
        android:layout_below="@id/text2"
        android:layout_toRightOf="@id/text2"
        android:text="@string/verify_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
    </TextView>

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_address"
        android:layout_below="@id/tv1"
        android:layout_marginLeft="70dp">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_googlemap"
        android:layout_below="@id/tv2"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="70dp">
    </TextView>

    <fragment
        android:id="@+id/map_fragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="220dp"
        tools:layout="@layout/fragment_googlemap">
    </fragment>

</RelativeLayout>