<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nestedscrillview"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--Name input-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lay_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <EditText
                android:id="@+id/et_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="text"
                android:maxLines="1">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Email input-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lay_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <EditText
                android:id="@+id/et_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="text"
                android:maxLines="1">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Password input-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lay_Pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <EditText
                android:id="@+id/et_Pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Confirm Password input-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lay_ConPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <EditText
                android:id="@+id/et_ConPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"
                android:maxLines="1">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Register Button-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/text_register">
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_al_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/text_already_member">

        </androidx.appcompat.widget.AppCompatTextView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>