<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nestedscrillview"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--Heading (Titles)-->
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/Heading"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp">
        </com.google.android.material.textview.MaterialTextView>

        <!--Logo-->
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo">
        </androidx.appcompat.widget.AppCompatImageView>

        <!--Email input-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lay_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/et_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="text"
                android:maxLines="1">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Password input-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lay_Pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/et_Pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <!--login Button-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/buttonColor"
            android:textColor="@color/whiteText"
            android:textStyle="bold"
            android:text="@string/text_login"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp">
        </androidx.appcompat.widget.AppCompatButton>

        <!--register link-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_link_reg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/text_not_member">
        </androidx.appcompat.widget.AppCompatTextView>

        <!--Facebook login button-->

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>